# sgl-bench

./: README.md  cuda_ipc_test_guide.md  pyproject.toml
.claude/skills/sgl-bench/: SKILL.md
presets/: qwen_vl_72b_image.toml
presets/acc/: aime25.toml
presets/cache/: mm_multiturn_1080p.toml  mm_partial_prefix.toml  mm_same_image.toml
presets/perf/: image_n1_1080p_c16.toml  image_n1_1080p_c32.toml  image_n1_720p_c128.toml  image_n2_1080p_c16.toml  image_n2_720p_c32.toml  image_n3_1080p_c16.toml  image_n3_1080p_c32.toml  image_n3_720p_c128.toml  image_n5_1080p_c128.toml  image_n5_1080p_c16.toml  image_n5_1080p_c32.toml  image_n5_720p_c128.toml
presets/perf/default/: image_n10_1080p_c128.toml  image_n10_1080p_c16.toml  image_n10_1080p_c32.toml  image_n10_720p_c128.toml  image_n10_720p_c16.toml  image_n1_1080p_c128.toml  image_n1_720p_c16.toml  image_n1_720p_c32.toml  image_n2_1080p_c128.toml  image_n2_1080p_c32.toml  image_n2_720p_c128.toml  image_n2_720p_c16.toml  image_n3_1080p_c128.toml  (+4 more)
presets/stress/: soak_1h.toml  soak_5m_smoke.toml
records/: vit_batch_benchmark_report.md
records/20260323_075942_OCR_test/: experiment.json
records/20260323_080754_OCR_test/: experiment.json
records/20260323_081534_OCR_test/: experiment.json
records/20260323_081902_OCR_test/: experiment.json
records/20260323_083306_OCR_test/: config.toml  experiment.json
records/20260405/: REPORT_cuda_ipc_20260405.md
sgl_bench/: accuracy.py  benchmark.py  cache.py  cli.py  compare.py  config.py  detect.py  experiment.py  probe.py  runner.py  server.py  stress.py
(+1227 files in other folders)
