[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sgl-bench"
version = "0.1.0"
description = "Automated benchmark tool for SGLang VLM models"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
sgl-bench = "sgl_bench.cli:cli"

[tool.setuptools.packages.find]
include = ["sgl_bench*"]
